# vedo

./: .gitignore  250.vtk  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FONT.LICENSE  LICENSE  MANIFEST.in  README.md  aspring_player.py  cli_entry.py  colors.py  events.py  example.py  examples  mkdocs.yml  output_vedo_test.txt  plotter  plotter.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  slicer1.py  tutorial.py  vedo.bat  vedo.desktop  vtkanalysis.py  vtkcolors.py  vtkevents.py  vtkio.py  vtkloader.py  vtkplotter.bat  vtkplotter.desktop  vtkshapes.py  vtkutils.py  vtkvideo.py
.circleci/: config.yml
data/: 270.vtk  290.vtk  big_porsche.ply  colored_triangle.vtp  cube.neutral  pulley.vtu  ring.gmsh  turing_data.npy  unstrgrid.vtu
data/shapes/: cessna.vtk  scissors.ply  teddy.vtk  torso.vtp
docs/: Makefile  README.rst  changes.md  documentation.md  examples_db.js  index.md  news.txt  requirements.txt  sharpelab.py  tutorials.md  vlogo.odp  vlogo_maketube.py  vtkmodules_9.2.6_hierarchy.txt  vtkmodules_9.3.0_hierarchy.txt
docs/api/: addons.md  applications.md  assembly.md  backends.md  chemistry.md  colors.md  core.md  file_io.md  grids.md  index.md  mesh.md  plotter.md  pointcloud.md  pyplot.md  settings.md  shapes.md  transformations.md  utils.md  visual.md  volume.md
docs/assets/: docs-overrides.css  search-expand.js
docs/logos/: embl_logo.py  fenics_logo3d.py  fenics_mesh.py  gyroid_web.py  lab_logo_maker.py  logo_vedo_simple.py  sharpelab.py  vedo_round_logo.odp  vlogo.odp  vlogo_maketube.py
docs/pdoc/: build_html.py  custom.css  module.html.jinja2
docs/source/: conf.py
docs/web_page/: examples_db.js  index.html
examples/: README.md  _optional.py  align.py  align1.py  align2.py  boolean.py  brownian.py  brownian2d.py  car.py  carcrash.py  cell.py  cells_main.py  clustering.py  colormaps.py  data  delaunay2d.py  diffusion.py  fitline.py  fxy.py  gas.py  growingcells.py  gyroscope.py  gyroscope1.py  gyroscope2.py  lights.py  lorenz.py  manyspheres.py  mesh_coloring.py  multiple_pendulum.py  multiwindows.py  readTiffStack.py  readVolume.py  rotateImage.py  run_all.sh  sh_morphing.py  shrink.py  spherical_harmonics.py  spring.py  surfIntersect.py  testrotation.py  (+5 more)
examples/advanced/: README.md  aspring.py  blackbody.py  brownian2D.py  capping_mesh.py  cell_main.py  centerline1.py  centerline2.py  contours2mesh.py  convexHull.ipynb  convexHull.py  convex_hull.py  cutAndCap.py  cutFreeHand.py  cutWithMesh.py  cutWithMesh1.py  cutWithMesh2.py  cutWithPoints1.py  cutWithPoints2.py  cut_and_cap.py  cut_with_mesh1.py  cut_with_points1.py  cut_with_points2.py  densifycloud.py  diffuse_data.py  doubleslit.py  fatlimb.py  fft2d.py  fitline.py  fitplanes.py  fitsphere.py  fitspheres1.py  fitspheres2.py  gas.py  geodesic.py  geodesic_curve.py  geological_model.py  gyroid.py  gyroscope1.py  gyroscope2.py  (+80 more)
examples/animation/: airplane1.py  airplane2.py  brownian2d.py  drag_chain.py  fourier_epicycles.py  grayscott.py  gyroscope1.py  mag_field1.py  optics_base.py  optics_main1.py  particle_simulator.py  run_all.sh  self_org_maps2d.py  springs_fem.py  tunnelling1.py  tunnelling2.py  wave_equation1d.py  wave_equation2d.py
examples/basic/: README.md  a_first_example.py  acollection.ipynb  acollection.py  addicon.py  align1.ipynb  align1.py  align2.ipynb  align2.py  align3.py  align4.py  align5.py  align6.py  annotations.py  background_image.py  bgImage.py  boolean.py  boundaries.py  buildmesh.ipynb  buildmesh.py  buildpolydata.py  buttons.py  buttons1.py  buttons2.py  buttons3.py  carcrash.py  cartoony.py  cellsWithinBounds.py  cells_within_bounds.py  closewindow.py  clustering.ipynb  clustering.py  colorMeshCells.py  color_mesh_cells1.py  color_mesh_cells2.py  colorcubes.py  colorlines.py  colormap_list.py  colormaps.py  colorpalette.py  (+143 more)
examples/data/: 270_flank.vtk  290.ply  SuperQuadric.vtp  cavity.vtk  cow.g  dodecahedron.vtk  dolfin_cube.h5  dolfin_fine.xml  embryo.tif  fourobj.vtk  fourobj.wrl  genes.csv  limb.pcd  mesh.pvd  mesh000000.vtu  motor.byu  office.binary.vtk  omesh.vtk  timecourse1d.npy  ugrid.vtk  vase.vti
examples/extras/: chemistry1.py  ellipt_fourier_desc.py  embryo.html  export_numpy.py  export_x3d.py  fast_simpl.py  flag_labels1.py  flag_labels2.py  image_probe.py  image_to_mesh.py  iminuit1.py  iminuit2.py  madcad1.py  make_video.py  meshio_read.py  meshlib1.py  morphomatics_riemann.py  morphomatics_tube.py  nelder-mead.py  pygeodesic1.py  pygmsh_cut.py  qt_cutter.py  quaternions.py  remesh_ACVD.py  remesh_meshfix.py  run_all.sh  spherical_harmonics1.py  trame_ex1.py  trame_ex3.py  trimesh_ray.py  trimesh_shortest.py  wx_window.py
examples/notebooks/: README.md  align1.ipynb  align2.ipynb  distance2mesh.ipynb  draw_points.ipynb  embryo.ipynb  interpolateVolume.ipynb  interpolate_volume.ipynb  legosurface.ipynb  manipulate_camera.ipynb  notebook_mesh_view.ipynb  notebooks_index.ipynb  numpy2volume.ipynb  pca.ipynb  pore_network.ipynb  shrink.ipynb  (+5 more)
notebooks/: README.md  notebooks_index.ipynb  tutorial.ipynb
tests/: conftest.py  pipeline.txt  run_all.sh  test_actors.py  test_clone.py  test_dolfin.py  test_pipeline.txt
vedo/: __init__.py  addons.py  addons_axes.py  addons_core.py  addons_cutters.py  addons_icon.py  addons_interaction.py  addons_measure.py  addons_sliders.py  addons_ui.py  addons_widgets.py  analysis.py  applications.py  assembly.py  backends.py  base.py  chemistry.py  cli.py  cmaps.py  colors.py  core.py  core_common.py  core_data.py  core_points.py  core_volume.py  docs.py  docs_defs.py  dolfin.py  events.py  file_io.py  grids.py  image.py  interactor_modes.py  io.py  lazy_imports.py  mesh.py  picture.py  player_animation.py  plotter.py  plotter_camera.py  (+24 more)
vtkplotter/: __init__.py  actors.py  addons.py  analysis.py  animation.py  applications.py  assembly.py  backends.py  base.py  colors.py  docs.py  dolfin.py  events.py  mesh.py  picture.py  plot2d.py  plotter.py  pyplot.py  settings.py  shapes.py  tetmesh.py  trimesh.py  ugrid.py  utils.py  version.py  volume.py  vtkio.py
(+1613 files in other folders)
