[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedo"
version = "2025.6.1"

description = "A python module for scientific visualization, analysis of 3D objects and point clouds."

authors = [
    {name = "Marco Musy", email = "mmusy@elisava.net"}
]

maintainers = [
    {name = "Marco Musy", email = "mmusy@elisava.net"}
]

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

keywords = ["vtk", "numpy", "3d", "visualization", "mesh", "volume", "point-cloud"]

classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = [
    "vtk",
    "numpy",
    "typing-extensions",
    "Pygments",
    "matplotlib"
]

[project.optional-dependencies]
all = [
    "scipy"
]

[project.urls]
Homepage = "https://github.com/marcomusy/vedo"
Documentation = "https://vedo.embl.es"
Repository = "https://github.com/marcomusy/vedo"
Changelog = "https://github.com/marcomusy/vedo/blob/master/docs/changes.md"


[tool.setuptools]

packages = [
    "vedo",
    "vedo.core",
    "vedo.applications",
    "vedo.addons",
    "vedo.external",
    "vedo.file_io",
    "vedo.grids",
    "vedo.mesh",
    "vedo.plotter",
    "vedo.pointcloud",
    "vedo.pyplot",
    "vedo.shapes",
    "vedo.visual",
    "vedo.volume",
    "vedo.examples.basic",
    "vedo.examples.advanced",
    "vedo.examples.pyplot",
    "vedo.examples.simulations",
    "vedo.examples.volumetric",
    "vedo.examples.other"
]

include-package-data = true

license-files = ["LICENSE", "FONT.LICENSE"]


[tool.setuptools.package-data]
vedo = [
    "*",
    "fonts/*",
]

[tool.setuptools.package-dir]
vedo = "vedo"
"vedo.examples.basic" = "examples/basic"
"vedo.examples.advanced" = "examples/advanced"
"vedo.examples.pyplot" = "examples/pyplot"
"vedo.examples.simulations" = "examples/simulations"
"vedo.examples.volumetric" = "examples/volumetric"
"vedo.examples.other" = "examples/other"

[project.scripts]
vedo = "vedo.cli:main"
